# DNA_Noam

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: breath_iteration_benchmark.cpp  querying_benchmark.cpp
common/: common.cpp  common.h
count/: main.cpp
data/count/: wolf.tsv
fm_indexer/: main.cpp
scripts/: count  index-random  make-build  perf  run-p
task/: Common-Breadth-Parallel.cpp  Common-Breadth-Serial.cpp  main.cpp  temporaries.cpp
tests/: omp.cpp
